fix(ui): address some scrollbar needs for <800px heights. closes #202

--- a/src/app/components/panel-container/panel-container.component.scss
+++ b/src/app/components/panel-container/panel-container.component.scss
@@ -46,3 +46,10 @@
     padding: 0.5rem;
   }
 }
+
+::ng-deep .panel-card .card-body {
+  @media (max-height: 900px) {
+    max-height: 250px;
+    overflow-y: auto;
+  }
+}
